# gml

./: .gitignore  CMakeLists.txt  Readme.md  gml.sln
gml/: gml.vcxproj  gml.vcxproj.filters  gmlaabb.h  gmlangle.h  gmlcolor.h  gmlconversion.h  gmldualquat.h  gmlmatrix.h  gmlray.h  gmlrect.h  gmlrotation.h  gmlutility.h  gmlvector.h
gml/include/: gmlaabb.h  gmlangle.h  gmlcolor.h  gmlconv.h  gmlconversion.h  gmldualquat.h  gmlmatrix.h  gmlquaternion.h  gmlray.h  gmlrect.h  gmlrotation.h  gmlutility.h  gmlvector.h  matrix.h
gml/source/: aabb.cpp  aabb2d.cpp  angle.cpp  color3.cpp  color4.cpp  convertion.cpp  coord.cpp  dual_quat.cpp  eular.cpp  inner_util.h  math_util.cpp  matrix22.cpp  matrix32.cpp  matrix33.cpp  matrix44.cpp  quaternion.cpp  ray.cpp  rect.cpp  utility.cpp  vector2.cpp  vector3.cpp  vector4.cpp
gml_test/: Color3Test.cpp  Color4Test.cpp  RectTest.cpp  UtilityTest.cpp  Vector2Test.cpp  Vector3Test.cpp  aabb2d_test.cpp  aabb_test.cpp  color3_test.cpp  color4_test.cpp  coord_test.cpp  degree_test.cpp  dual_quaternion_test.cpp  eular_test.cpp  gml_test.vcxproj  gml_test.vcxproj.filters  main.cpp  matrix2x2_test.cpp  matrix3x2_test.cpp  matrix3x3_test.cpp  matrix4x4_test.cpp  quaternion_test.cpp  radian_test.cpp  rect_test.cpp  stdafx.cpp  stdafx.h  utility_test.cpp  vector2_test.cpp  vector3_test.cpp  vector4_test.cpp  vector_swizzle.cpp
gml_testbed/: gml_testbed.vcxproj  main.cpp
